[package]
name = "scraper-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
chrono = { version = "0.4.24", features = ["serde"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
mongodb = { version = "2.7.0", features = ["bson-chrono-0_4", "tracing-unstable"] }
thiserror = "1.0.40"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
